# atse

./: .gitignore  .goreleaser.yml  ATSE-ARCHITECTURE-2025.md  BENCHMARK-VALIDATION.md  COMPREHENSIVE-REGRESSION-ANALYSIS.md  Cargo.toml  DGRAPH-VALIDATION.md  FINAL-ARCHITECTURE-SUMMARY.md  Makefile  PHASE1-PHASE2-IMPROVEMENTS.md  PHASE2_COMPLETE.md  PLAN.md  README.md  REGRESSION-TEST-RESULTS.md  RELEASING.md  USER-TEST-RESULTS.md  benchmark_plan.md  benchmark_results.md  cline-test-results.md  comprehensive-test-results.txt  go.mod  go.sum  install-dev.sh  regression_test.sh  test-suite-comprehensive.sh  use-atse-tool-test-nov15-2025.md  working-atse-research-task.md
.clinerules/: atse-usage-guide.md
.github/workflows/: release.yml
benchmark/: README.md
benchmark/cases/: auth.yml  backup.yml  indexing.yml  query_pipeline.yml  storage.yml
benchmark/config/: benchmark.config.yml
benchmark/docker/: Dockerfile
benchmark/ground_truth/: auth.json  backup.json  indexing.json  query_pipeline.json  storage.json
benchmark/scale/: README.md
cmd/atse/: main.go
docs/man/: atse.1
internal/cli/: context.go  deps.go  extract.go  find_fn.go  graph.go  graph_connections.go  graph_index.go  list_fns.go  metrics.go  query.go  root.go  search.go
internal/index/: builder.go  cache.go  index.go  partial.go  types.go
internal/langspec/: registry.go
internal/output/: formatter.go
internal/parser/: manager.go
internal/ripgrep/: client.go  types.go
internal/tokenmetrics/: tokenmetrics.go
research/: __init__.py
scripts/: install.sh
src/: lib.rs  main.rs
(+33 files in other folders)
