[package]
name = "atse"
version = "0.1.0"
edition = "2021"
authors = ["ATSE Team"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"
regex = "1.11"
strsim = "0.11"
tree-sitter = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
ignore = "0.4"
bytesize = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
which = "4.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
